--- a/index.html
+++ b/index.html
@@ -116,6 +116,28 @@
 			padding-bottom: .5em;
 		}
 
+
+		.large-image {
+			background-color: white;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100vw;
+			height: 100vh;
+		}
+
+		.large-image .close {
+			position: fixed;
+			top: 1em;
+			right: 1em;
+			font-size: 2em;
+		}
+
+		img.large {
+			max-width: 100%;
+			max-height: 100%;
+		}
+
 		.sidebar .hidden {
 			width: auto;
 			height: 2em;
