moved the other side

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		.sidebar {
 			position: fixed;
-			top: 5vh;
+			bottom: 5vh;
 			left: 5vh;
 			width: 20vw;
 			min-width: 400px;
@@ -129,11 +129,13 @@
 		.large-image .close {
 			position: fixed;
 			top: 1em;
-			right: 1em;
+			left: 1em;
 			font-size: 2em;
 		}
 
 		img.large {
+			position: absolute;
+			right: 0;
 			max-width: 100%;
 			max-height: 100%;
 		}
