just add links now and add desc on are.na

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 		.sidebar {
 			position: fixed;
-			bottom: 5vh;
-			left: 5vh;
+			left: 0;
+			bottom: 0;
 			width: 20vw;
 			min-width: 400px;
 			max-height: 90vh;
@@ -85,6 +85,10 @@
 
 		.text-container {
 			width: 100%;
+		}
+
+		.text-container :nth-child(1) {
+			margin-top: auto;
 		}
 
 		.image-container {
