box-shadow slay

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 		.image-container {
 			height: 100vh;
 			overflow-y: scroll;
+			box-shadow: 0 0 20px 5px rgba(0, 0, 0, .1);
 		}
 
 		.project-display {
@@ -113,7 +114,8 @@
 
 		.link.display {
 			max-width: 80%;
-			padding-bottom: 2em;
+
+			padding: .5em;
 			font-size: 2em;
 		}
 
