--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Aaryan Pashine</title>
-
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
@@ -103,6 +103,7 @@
 			display: grid;
 			grid-template-columns: 1fr 3fr;
 			height: 100vh;
+			width: 100vw;
 			overflow: hidden;
 		}
 
@@ -142,8 +143,17 @@
 			height: 100vh;
 		}
 
+		.close {
+			opacity: .7;
+		}
+
+		.sidebar-content {
+			padding-top: 2em;
+		}
+
 
 		.close.back {
+			opacity: 1;
 			font-size: 1em;
 			padding: 1em;
 			color: yellow;
@@ -176,42 +186,42 @@
 		}
 
 		.float_1 {
-			animation: float_1 15s ease-in-out infinite;
+			animation: float_1 55s infinite;
 		}
 
 		.float_2 {
-			animation: float_2 15s ease-in-out infinite;
+			animation: float_2 55s infinite;
 		}
 
 		@keyframes float_1 {
 			0% {
-				transform: translate3D(0, 0, 0);
+				transform: translate3D(0, 0, -35px);
 			}
 
 			50% {
-				transform: translate3D(0, -10px, 0);
+				transform: translate3D(0, -35px, 0);
 			}
 
 			100% {
-				transform: translate3D(0, 0, 0);
+				transform: translate3D(0, 0, -35px);
 			}
 		}
 
 		@keyframes float_2 {
 			0% {
-				transform: translateY(0);
+				transform: translate3D(0, 0, 35px);
 			}
 
 			50% {
-				transform: translateY(10px);
+				transform: translate3D(0, 35px, 0);
 			}
 
 			100% {
-				transform: translateY(0);
+				transform: translate3D(0, 0, 35px);
 			}
 		}
 
-		@media only screen and (max-width: 800px) {
+		@media (max-width: 800px) {
 			.project-display {
 				grid-template-rows: 1.5fr 4fr;
 				grid-template-columns: 1fr;
